welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:11: error: value Est is not a member of object plm.universe.Direction
    if (getDirection()==Direction.Est()){
                                  ^SnakeBuggle:28: error: value Est is not a member of object plm.universe.Direction
    if (getDirection()==Direction.Est()){
                                  ^